frame/support/test/tests/pallet_ui/storage_result_query_parenthesized_generics.stderr
error: expected `,`
  --> tests/pallet_ui/storage_result_query_parenthesized_generics.rs:18:55
   |
18 |     type Foo<T: Config> = StorageValue<_, u8, ResultQuery(NonExistentValue)>;
   |                                                          ^
